# Lamp.Telemetry.Api

./: AGENTS.md  CMakeLists.txt
app/: CMakeLists.txt
mock/: CMakeLists.txt
mock/PiSubmarine/Lamp/Telemetry/Api/: IProviderMock.h
public/PiSubmarine/Lamp/Telemetry/Api/: IProvider.h  Status.h
src/: CMakeLists.txt
test/: CMakeLists.txt
test/PiSubmarine/Lamp/Telemetry/Api/: IProviderMockTest.cpp
